# gpacalculator

./: README.md  app.py  controller.py  pyproject.toml
pyqt6_gpa/: app.py  controller.py
